[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cased"
version = "1.0.0"
description = "A lightweight library for controlling text."
readme = "README.md"
authors = [{ name="Johnathan31"}]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/johnathan31/Case"

[tool.pytest.ini_options]
testpaths = ["tests"]

